Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98023

Return value of mimeTypeForFormat is incorrect on QMediaFormat

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.0 Alpha
    • 6.2.0
    • Multimedia
    • None
    • All
    • a69b60f0b6d79086d459f20a3ab7c4d111901319 (qt/qtmultimedia/dev) 8f6205d71ee266bed96ffce775fecd154c8ba7fa (qt/qtmultimedia/6.2)

      When you select the mp3 or flac file type from the AudioRecorder File Container list, the saved file type is invalid.

      Select mp3 and then the saved file type is flac.
      Select flac, then the saved file type is mp3.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pekkagehor Pekka Gehör
            pekkagehor Pekka Gehör
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes