Fix for return value of mimeTypeForFormat issue

After the fix mp3 and flac types are also in the right place in the list.
So, saved file types are correct.

Fixes: QTBUG-98023
Pick-to: 6.2
Change-Id: I7c89f6482a074e0b9f2af654c7cab25f62960473
Reviewed-by: Lars Knoll <lars.knoll@qt.io>